Major edits to assets

--- a/_includes/about/about-cta.html
+++ b/_includes/about/about-cta.html
@@ -9,7 +9,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/about/startups.jpg" class="img-fluid slick-img slick-shadow-left-white" alt="">
+            <img src="{{site.baseurl}}assets/dev/img/about/startups.jpg" class="img-fluid slick-img slick-shadow-left-white" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>We offer a special packages for start-ups</h3>
