--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           </li>
           {% endfor %}
           <li>
-            <a href="https://www.picktime.com/aazizandco" class="btn btn-md bg-red text-white">Book a Meeting</a></li>
+            <a href="https://www.picktime.com/aazizandco" class="btn btn-md bg-red text-white attention-btn">Book a Meeting</a></li>
         </ul>
         
       </nav><!-- .nav-menu -->
