--- a/_includes/services/services-accouonting.html
+++ b/_includes/services/services-accouonting.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
           <div class="col-lg-3 order-1 order-lg-1 slick-height">
-            <img src="assets/img/about/accounting-services.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x" alt="">
+            <img src="{{site.baseurl}}assets/dev/img/about/accounting-services.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Accounting Services</h3>
