--- a/_includes/services/services-tax-investigation.html
+++ b/_includes/services/services-tax-investigation.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 order-2  order-lg-2 slick-height">
-              <img src="assets/img/about/tax-investigation-services.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x tax-inv-img" alt="">
+              <img src="{{site.baseurl}}assets/dev/img/about/tax-investigation-services.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x tax-inv-img" alt="">
             </div>
             <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
               <h3>Tax Investigation</h3>
