--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -8,12 +8,12 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item active" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
           <div class="carousel-container slick-review">
             
             <div class="container">
               <p class="animate__animated animate__fadeInUp">
-                <img src="assets/img/testemonials/jetturk.png" alt="" class="slick-member">
+                <img src="{{site.baseurl}}assets/dev/img/testemonials/jetturk.png" alt="" class="slick-member">
               </p>
               <p class="animate__animated animate__fadeInUp">Happy with their services. No complaints, and good value. No need to look for an alternative..</p>
               <p>- JETTURK</p>
@@ -23,12 +23,12 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
             <div class="carousel-container slick-review">
               
               <div class="container">
                 <p class="animate__animated animate__fadeInUp">
-                  <img src="assets/img/testemonials/massud-akhtar.png" alt="" class="slick-member">
+                  <img src="{{site.baseurl}}assets/dev/img/testemonials/massud-akhtar.png" alt="" class="slick-member">
                 </p>
                 <p class="animate__animated animate__fadeInUp">I had the pleasure of working with Aziz & Co  with helpful and responsible team members specially Mr Ali Ahsan and Mr Osama who spent all the time i needed and answer all my questions/concerns and I am very impressed with  level of services.</p>
                 <p>- Massud Akhtar</p>
@@ -38,12 +38,12 @@
           </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
             <div class="carousel-container slick-review">
               
               <div class="container">
                 <p class="animate__animated animate__fadeInUp">
-                  <img src="assets/img/testemonials/krissy-o.png" alt="" class="slick-member">
+                  <img src="{{site.baseurl}}assets/dev/img/testemonials/krissy-o.png" alt="" class="slick-member">
                 </p>
                 <p class="animate__animated animate__fadeInUp">Very much appreciated and quick response and very helpful. Thank every in the company keep up the excellent work.</p>
                 <p>- Krissy O</p>
@@ -53,12 +53,12 @@
           </div>
 
         <!-- Slide 4 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
             <div class="carousel-container slick-review">
               
               <div class="container">
                 <p class="animate__animated animate__fadeInUp">
-                  <img src="assets/img/testemonials/sujana-karnam.png" alt="" class="slick-member">
+                  <img src="{{site.baseurl}}assets/dev/img/testemonials/sujana-karnam.png" alt="" class="slick-member">
                 </p>
                 <p class="animate__animated animate__fadeInUp">Mr Aaziz and Team very dedicated and amazing
                   specially thank you  Mr Ali Ahsan for being patient   Responding  all my queries regarding VAT and all other account related queries. very happy with customer service.Highly recommened !!very professional indeed..</p>
@@ -69,12 +69,12 @@
           </div>
 
           <!-- Slide 5 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
             <div class="carousel-container slick-review">
               
               <div class="container">
                 <p class="animate__animated animate__fadeInUp">
-                  <img src="assets/img/testemonials/oluwafunmike-dawodu.png" alt="" class="slick-member">
+                  <img src="{{site.baseurl}}assets/dev/img/testemonials/oluwafunmike-dawodu.png" alt="" class="slick-member">
                 </p>
                 <p class="animate__animated animate__fadeInUp">We  at Tofem have been using Aaziz & co for so many years, they're hardworking, reliable and trustworthy.  I will continue to intoduce clients to them.</p>
                 <p>- Oluwafunmike Dawodu</p>
@@ -84,12 +84,12 @@
           </div>
 
           <!-- Slide 6 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/1.svg)">
+        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
             <div class="carousel-container slick-review">
               
               <div class="container">
                 <p class="animate__animated animate__fadeInUp">
-                  <img src="assets/img/testemonials/brightview-cctv.png" alt="" class="slick-member">
+                  <img src="{{site.baseurl}}assets/dev/img/testemonials/brightview-cctv.png" alt="" class="slick-member">
                 </p>
                 <p class="animate__animated animate__fadeInUp">I can't Explain how good these guys are prompt efficient and very professional very helpful and always a msg away from help. Would Recomend to anyone looking for honest and reliable Accountants 5stars all the way. They are part of the team.</p>
                 <p>- Bright View CCTVs</p>
