--- a/_includes/services/services-self-assessment.html
+++ b/_includes/services/services-self-assessment.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 order-2  order-lg-2 slick-height">
-              <img src="assets/img/about/self-assessment.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x self-img" alt="">
+              <img src="{{site.baseurl}}assets/dev/img/about/self-assessment.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x self-img" alt="">
             </div>
             <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
               <h3>Self Assessment &amp; Tax Returns Services</h3>
