--- a/_layouts/framework.html
+++ b/_layouts/framework.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}assets/dev/favicon/favicon-16x16.png">
   <link rel="manifest" href="{{site.baseurl}}assets/dev/favicon/site.webmanifest">
   <link rel="mask-icon" href="{{site.baseurl}}assets/dev/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+  <link rel="shortcut icon" href="{{site.baseurl}}assets/dev/favicon/favicon.ico">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="msapplication-config" content="{{site.baseurl}}assets/dev/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
