--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -7,7 +7,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item active" >
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Welcome to <span>AAziz & Co. Accountants</span></h2>
@@ -18,7 +18,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/2.svg)">
+        <div class="carousel-item" >
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Expert Tax Consultants Team</h2>
@@ -29,7 +29,7 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/3.svg)">
+        <div class="carousel-item" >
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Celebrating 13 Years of Service</h2>
