--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -8,7 +8,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item active">
           <div class="carousel-container slick-review">
             
             <div class="container">
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item">
             <div class="carousel-container slick-review">
               
               <div class="container">
@@ -38,7 +38,7 @@
           </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item">
             <div class="carousel-container slick-review">
               
               <div class="container">
@@ -53,7 +53,7 @@
           </div>
 
         <!-- Slide 4 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item">
             <div class="carousel-container slick-review">
               
               <div class="container">
@@ -69,7 +69,7 @@
           </div>
 
           <!-- Slide 5 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item">
             <div class="carousel-container slick-review">
               
               <div class="container">
@@ -84,7 +84,7 @@
           </div>
 
           <!-- Slide 6 -->
-        <div class="carousel-item" style="background-image: url({{site.baseurl}}assets/dev/img/slide/1.svg)">
+        <div class="carousel-item">
             <div class="carousel-container slick-review">
               
               <div class="container">
