This is major edit with team members and link correction

--- a/_includes/team-index.html
+++ b/_includes/team-index.html
@@ -28,7 +28,7 @@
         {% endfor %}
       </div>
       <div class="text-center" style= "margin-top: 40px;">
-        <a href="about-us.html#team" class="slick-btn" style="justify-content: center;">All Team Members</a>
+        <a href="about.html#team" class="slick-btn" style="justify-content: center;">All Team Members</a>
       </div>
     </div>
   </section><!-- End Team Section -->
