--- a/_layouts/framework.html
+++ b/_layouts/framework.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Home | AAziz</title>
+  <title>{{page.title}} | AAziz</title>
   <meta content="We are a team of Chartered Certified Accountants and legal consultants for all aspects of Accountancy, Taxation, commercial lease, legal business acquisition, mergers and sales transactions." name="description">
   <meta content="accountants, legal consultants, certified accountants, taxation, tax, commercial lease, acquisition, mergers, sales transations, contractors accounts, " name="keywords">
 
