--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -2,16 +2,18 @@
 <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">info@aazizandco.co.uk</a>
-        <i class="icofont-phone"></i> <a href="tel:+442036599254"> +44 20 3659 9254</a>  
-         <a href="+44 78 1044 8530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> +44 78 1044 8530</a> 
+        {% if site.email %}<i class="icofont-envelope"></i> <a href="mailto:{{site.email}}">info@aazizandco.co.uk</a>{% endif %}
+        {% if site.socials.phone %}<i class="icofont-phone"></i> <a href="tel:{{site.socials.phone}}"> +44 20 3659 9254</a>{% endif %}
+         <a href="https://wa.me/447810448530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> +44 78 1044 8530</a> 
       </div>
       <div class="social-links">
-        <a href="javascript:;" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.facebook.com/AAzizandco" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="https://g.page/aazizandco?gm" class="skype"><i class="icofont-google-plus"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="icofont-twitter"></i></a>{% endif %}
+        {% if site.socials.facebook %}<a href="https://www.facebook.com/{{ site.socials.facebook }}" class="facebook"><i class="icofont-facebook"></i></a>{% endif %}
+        {% if site.socials.gmb %}<a href="https://g.page/{{ site.socials.gmb | append: "?gm" }}" class=""><i class="bx bxl-google"></i></a>{% endif %}
+        {% if site.socials.instagram %}<a href="https://www.instagram.com/{{site.socials.instagram }}" class="instagram"><i class="icofont-instagram"></i></a>{% endif %}
+        {% if site.socials.skype %}<a href="{{ site.socials.skype }}" class="skype"><i class="icofont-skype"></i></a>{% endif %}
+        {% if site.socials.linkedin %}<a href="#" class="{{ site.socials.linkedin }}"><i class="icofont-linkedin"></i></i></a>{% endif %}
+        {% if site.socials.trustpilot %}<a href="#" class="{{ site.socials.trustpilot }}"><i class="icofont-star"></i></i></a>{% endif %}
       </div>
     </div>
   </div>
