--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/aaziz-dark.svg" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
+            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/aaziz.svg" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
             <p>
               2 - Sanders Parade, <br>
               Greyhound Lane, Streatham, <br>
@@ -20,7 +20,7 @@
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
-            <ul class="slick-ul">
+            <ul class="slick-ul color-black">
               <li><i class=""></i> <a href="index.html">Home</a></li>
               <li><i class=""></i> <a href="about.html">About us</a></li>
               <li><i class=""></i> <a href="services.html">Services</a></li>
@@ -42,33 +42,25 @@
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <div class="col-lg-4 col-md-6 footer-newsletter footer-links">
             <h4>Our Newsletter</h4>
             <p class="slick-p">We post and update our clients with the hostile tax environment in regards of laws and policies on monthly basis. If you want to be a part of that, sign up with your email below :)</p>
-            <!-- <form action="https://aazizandco.us19.list-manage.com/subscribe/post?u=9dafb782f59b7156d64bc05a3&amp;id=7a20faf750" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate slick-form" target="_blank" novalidate>
-              <input type="email" name="email" class="slick-form"><div class="text-center"><button type="submit">Submit</button></div>
-            </form> -->
+            
 
 
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:black; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://aazizandco.us19.list-manage.com/subscribe/post?u=9dafb782f59b7156d64bc05a3&amp;id=7a20faf750" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9dafb782f59b7156d64bc05a3_7a20faf750" tabindex="-1" value=""></div>
-    <div class="clear custom-mc-btn"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button custom-mc-btn-rl"></div>
-    </div>
-</form>
-</div>
+          <!-- Begin Mailchimp Signup Form -->
+          <div id="mc_embed_signup">
+          <form action="https://aazizandco.us19.list-manage.com/subscribe/post?u=9dafb782f59b7156d64bc05a3&amp;id=7a20faf750" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9dafb782f59b7156d64bc05a3_7a20faf750" tabindex="-1" value=""></div>
+              <div class="clear custom-mc-btn"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-md bg-red text-white attention-btn"></div>
+              </div>
+          </form>
+          </div>
 
-<!--End mc_embed_signup-->
+          <!--End mc_embed_signup-->
 
 
 
@@ -78,8 +70,8 @@
         </div>
       </div>
     </div>
-    <div class="footer-info">
-      <div class="social-links mt-3">
+    <div class="footer-info2">
+      <div class="social-links pt-3 social-list">
         {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="bx bxl-twitter"></i></a>{% endif %}
         {% if site.socials.facebook %}<a href="https://www.facebook.com/{{ site.socials.facebook }}" class="facebook"><i class="bx bxl-facebook"></i></a>{% endif %}
         {% if site.socials.instagram %}<a href="https://www.instagram.com/{{site.socials.instagram }}" class="instagram"><i class="bx bxl-instagram"></i></a>{% endif %}
@@ -89,7 +81,7 @@
         {% if site.socials.skype %}{% endif %}
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid cpright">
       <div class="copyright">
         &copy; Copyright <strong><span>AAziz & Co. Accountants and Tax Consultants</span></strong>. All Rights Reserved
       </div>
