--- a/_includes/about/about-hero.html
+++ b/_includes/about/about-hero.html
@@ -3,15 +3,14 @@
     <!-- ======= Featured Services Section ======= -->
     <div class="container">
         <div class="section-title">
-            <h2>We welcome you to AAziz & Co. Accountants and Tax Consultants</h2>
+            <h2>WE WELCOME YOU TO AAZIZ & CO. ACCOUNTANTS AND TAX CONSULTANTS</h2>
             <p>We are a team of Chartered Certified Accountants and legal consultants for all aspects of Accountancy, Taxation, commercial lease, legal business acquisition, mergers and sales transactions.</p>
-            <p>We are based in London, providing comprehensie and professional accountancy services and Tax advice and practical support to local small and medium businesses alike.</p>
-            <p> Our team of qualified  accountants who have valueable experience in advising, monitoring, and co ordinating with clients to make sure that all necessary regulartory requiremnts are fullfilled.</p>
-            <p> We are a friendly & approachable, independent registered firm of Professional accountants, operating from modern  welcoming offices </p>
-            <p> We deal with every aspect of your tax, ranging from the preparation and submission of your self-assessment tax returns to pro-actively managing your tax affairs for parnterships, Limited companies and contractorship.</p>
-            <p>Aziz and Co  has the ability to offer comprehensive tailor-made solutions to its diversified clientele.</p>
-            <p>The highly experienced and skilled management team of AAziz & Co. Accountants is capable of performing complex and daunting tasks seamlessly while meeting tight deadlines.</p>
-            <p>Our team is focused on building long-term relationships and craft practial, and affordable solutions for the best interest of our respectable clients.  </p>
+            <p>We are based in London, providing comprehensive and professional accountancy services and Tax advice and practical support to local small and medium businesses alike.</p>
+            <p> Our team of qualified accountants who have valuable experience in advising, monitoring, and co ordinating with clients to make sure that all necessary regulatory requirements are fulfilled.</p>
+            <p> We are a friendly & approachable, independent registered firm of Professional accountants, operating from modern welcoming offices. </p>
+            <p>We deal with every aspect of your tax, ranging from the preparation and submission of your self-assessment tax returns to pro-actively managing your tax affairs for partnerships, Limited companies and contractor ship.</p>
+            <p>Aziz and Co have the ability to offer comprehensive tailor-made solutions to its diversified clientele. The highly experienced and skilled management team of AAziz & Co. Accountants is capable of performing complex and daunting tasks seamlessly while meeting tight deadlines.</p>
+            <p>Our team is focused on building long-term relationships and craft practical, and affordable solutions for the best interest of our respectable clients.</p>
             
         </div>
         <div class="cta-btn-container" style="display: block; text-align: center;"><a href="#test-hero" class="slick-btn" style="justify-content: center;">Testimonials</a> </div>
