--- a/_includes/contact/map-london.html
+++ b/_includes/contact/map-london.html
@@ -39,6 +39,7 @@
 
     </div>
   </section>
+  {% include contact/map-fullham.html %}
   <section class="contact" id="contact">
     <div class="section-title">
         <h2>Hassle-free Contact Form</h2>
