--- a/_includes/contact/map-fullham.html
+++ b/_includes/contact/map-fullham.html
@@ -1,6 +1,6 @@
 <section id="contact" class="contact slick-red-bg">
     <div class="section-title">
-        <h2 class="slick-hero-base">Fullham Branch Information</h2>
+        <h2 class="slick-hero-base">Fulham Branch Information</h2>
     </div>
     <div class="container">
       <div class="row">
@@ -9,7 +9,7 @@
             <div class="address">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>New Kings Road, Fullham, London SW6 4LZ</p>
+              <p>New Kings House, New Kings Road, Fulham, London SW6 4LZ</p>
             </div>
             <div class="email">
               <i class="icofont-envelope"></i>
