--- a/_includes/sectors.html
+++ b/_includes/sectors.html
@@ -1,36 +1,47 @@
 <!-- ======= Featured Services Section ======= -->
 <section id="featured-services" class="featured-services section-bg">
-    <div class="container">
-
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-md-6">
-          <div class="icon-box">
-            <div class="icon"><i class="icofont-castle"></i></div>
-            <h4 class="title"><a href="">Limited Companies</a></h4>
-            <p class="description">Doesn't matter if you are a startup or an enterprise level company, we have expertise in dealing with everything tax related such as business startup advice and structuring, bookkeeping and finance management.</p>
-            <p><a href="#limited-companies">Learn More...</a></p>
-          </div>
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-lg-4 col-md-6">
+        <div class="icon-box">
+          <div class="icon"><i class="icofont-castle"></i></div>
+          <h4 class="title"><a href="">Limited Companies</a></h4>
+          <p class="description">
+            Doesn't matter if you are a startup or an enterprise level company,
+            we have expertise in dealing with everything tax related such as
+            business startup advice and structuring, bookkeeping and finance
+            management.
+          </p>
+          <p><a href="#limited-companies">Learn More...</a></p>
         </div>
-
-        <div class="col-lg-4 col-md-6">
-          <div class="icon-box">
-            <div class="icon"><i class="icofont-crown-queen"></i></div>
-            <h4 class="title"><a href="">Contractors</a></h4>
-            <p class="description">Have you just started contracting or an existing in contracting business? If yes, then we can help you with how to maximise your profits and paying tax what you exactly owe.</p>
-            <p><a href="#contractor-siv">Learn More...</a></p>
-          </div>
-        </div>
-        
-        <div class="col-lg-4 col-md-6">
-          <div class="icon-box">
-            <div class="icon"><i class="icofont-user"></i></div>
-            <h4 class="title"><a href="">Individuals</a></h4>
-            <p class="description">Are you dealing with your taxes on an individual levels? We can help you with your self assessments, rental accounts and organizing accounts year round.</p>
-            <p><a href="">Learn More...</a></p>
-          </div>
-        </div>
-        
       </div>
 
+      <div class="col-lg-4 col-md-6">
+        <div class="icon-box">
+          <div class="icon"><i class="icofont-crown-queen"></i></div>
+          <h4 class="title"><a href="">Contractors</a></h4>
+          <p class="description">
+            Have you just started contracting or an existing in contracting
+            business? If yes, then we can help you with how to maximize your
+            profits and paying tax what you exactly owe.
+          </p>
+          <p><a href="#contractor-siv">Learn More...</a></p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="icon-box">
+          <div class="icon"><i class="icofont-user"></i></div>
+          <h4 class="title"><a href="">Individuals</a></h4>
+          <p class="description">
+            Are you dealing with your taxes on an individual levels? We can help
+            you with your Self-assessments, rental accounts and organizing
+            accounts year round.
+          </p>
+          <p><a href="">Learn More...</a></p>
+        </div>
+      </div>
     </div>
-  </section><!-- End Featured Services Section -->
+  </div>
+</section>
+<!-- End Featured Services Section -->
