--- a/_includes/services/services-new-business.html
+++ b/_includes/services/services-new-business.html
@@ -1,20 +1,36 @@
 <section class="services cta" id="services">
-    <div class="container">
-      <div class="row">
-          <div class="col-lg-3 order-1 order-lg-1 slick-height">
-            <img src="{{site.baseurl}}assets/dev/img/about/new-business-advice.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x" alt="" title="" style="">
-          </div>
-          <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Starting New Business</h3>
-            <p>Many of the businesses do not survive in 1 Year of incorporation all because of lack of advice from your legal and professional advisers. We are happy to help you with our professional and reliable advice to startup a new business. We will provide your proper business consultation and in return will listen your ideas.</p>
-            <h5 class="text-white">LTD Company Formation Complaince:</h5>
-            <p>1 - Company Incorporation<br>2 - Providing reference letter for clients to Open their business bank accounts with ease.<br>3 - you can also use our registered office address as your business address.</p>
-            <h5 class="text-white">Business Advice:</h5>
-            <p>We will provide you total peace of of mind and will assist you in your business plan with our professional and reliable advice.</p>
-            
-            
-          </div>
-          
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 order-1 order-lg-1 slick-height">
+        <img
+          src="{{site.baseurl}}assets/dev/img/about/new-business-advice.jpg"
+          class="img-fluid slick-img slick-shadow-right-white slick-height-x"
+          alt=""
+          title=""
+          style=""
+        />
+      </div>
+      <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content">
+        <h3>Starting New Business</h3>
+        <p>
+          Many of the businesses do not survive in 1 Year of incorporation all
+          because of lack of advice from your legal and professional advisers.
+          We are happy to help you with our professional and reliable advice to
+          startup a new business. We will provide your proper business
+          consultation and in return will listen your ideas.
+        </p>
+        <h5 class="text-white">LTD Company Formation Compliance:</h5>
+        <p>
+          1 - Company Incorporation<br />2 - Providing reference letter for
+          clients to open their business bank accounts with ease.<br />3 - You
+          can also use our registered office address as your business address.
+        </p>
+        <h5 class="text-white">Business Advice:</h5>
+        <p>
+          We will provide you total peace of mind and will assist you in your
+          business plan with our professional and reliable advice.
+        </p>
+      </div>
     </div>
+  </div>
 </section>
