--- a/_includes/services/services-self-assessment.html
+++ b/_includes/services/services-self-assessment.html
@@ -1,26 +1,54 @@
-<section class="services " id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 order-2  order-lg-2 slick-height">
-              <img src="{{site.baseurl}}assets/dev/img/about/self-assessment.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x self-img" alt="">
-            </div>
-            <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
-              <h3>Self Assessment &amp; Tax Returns Services</h3>
-              <p>Self Assesment tax returns are one of very important part of our services.</p>
-              <ul class="slick-ul">
-                  <li><i class="icofont-check-circled"></i> As it has its specific period i.e 06th April to 05th April, so its important for us we stay in touch with our clients.</li>
-                  <li><i class="icofont-check-circled"></i> We always contanct our client in may to take information from them i.e Income records such as Employment Income, Self-Employment Income and all relevant expenses for the period.</li>
-                  <li><i class="icofont-check-circled"></i> Filing Tax returns before the statuatory deadlines is always our priority to save our clients from penalties.</li>
-                  <li><i class="icofont-check-circled"></i> Our team always discusses the tax returns with clients to elimanate any issues </li>
-                  <li><i class="icofont-check-circled"></i> We provide our clients the tax planning advice and return the documents on time.</li>
-                  <li><i class="icofont-check-circled"></i> Solving the issues of our clients is always our priority and we make sure we always connected with our clients via phone or email with no extra cost.</li>
-              </ul>
-              <div>
-                <a href="" class="slick-btn">Learn More</a>
-              </div>
-            </div>
-            
+<section class="services" id="services">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 order-2 order-lg-2 slick-height">
+        <img
+          src="{{site.baseurl}}assets/dev/img/about/self-assessment.jpg"
+          class="img-fluid slick-img slick-shadow-right-white slick-height-x self-img"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
+        <h3>Self Assessment &amp; Tax Returns Services</h3>
+        <p>
+          Self Assesment tax returns are one of very important part of our
+          services.
+        </p>
+        <ul class="slick-ul">
+          <li>
+            <i class="icofont-check-circled"></i> As it has its specific period
+            i.e 06th April to 05th April, so its important for us we stay in
+            touch with our clients.
+          </li>
+          <li>
+            <i class="icofont-check-circled"></i> We always contact our client
+            in May to take information from them i.e Income records such as
+            Employment Income, Self-Employment Income and all relevant expenses
+            for the period.
+          </li>
+          <li>
+            <i class="icofont-check-circled"></i> Filing Tax returns before the
+            statuory deadlines is always our priority to save our clients from
+            penalties.
+          </li>
+          <li>
+            <i class="icofont-check-circled"></i> Our team always discusses the
+            tax returns with clients to eliminate any issues
+          </li>
+          <li>
+            <i class="icofont-check-circled"></i> We provide our clients the tax
+            planning advice and return the documents on time.
+          </li>
+          <li>
+            <i class="icofont-check-circled"></i> Solving the issues of our
+            clients is always our priority and we make sure we always connected
+            with our clients via phone or email with no extra cost.
+          </li>
+        </ul>
+        <div>
+          <a href="" class="slick-btn">Learn More</a>
         </div>
-        
+      </div>
     </div>
+  </div>
 </section>
