--- a/_includes/services/services-tax-investigation.html
+++ b/_includes/services/services-tax-investigation.html
@@ -1,23 +1,36 @@
-<section class="services " id="services">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 order-2  order-lg-2 slick-height">
-              <img src="{{site.baseurl}}assets/dev/img/about/tax-investigation-services.jpg" class="img-fluid slick-img slick-shadow-right-white slick-height-x tax-inv-img" alt="">
-            </div>
-            <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
-              <h3>Tax Investigation</h3>
-              <p>If you have received Tax Investigation letter from HMRC and looking for an opinion we are happy to provide you our professional and valueable opinion on it. We are very much experienced in providing this service. We will study the correspondence from HMRC or anyother authority and will provide our opinion. We provide this service on:<br>
-                1 - Hourly Rate<br>
-                2 - Success Rate
-              </p>
-            <p>We provide assistance in all types of inquiries from Self assessment returns filed to a full blown inquiry regarding your corporate matters. We are aware of the stress these enquiries put on normal people so we share this stress throughout the inquiry period by sharing the progress and directly act as agents on your behalf.</p>
-            
-              <div>
-                <a href="" class="slick-btn">Learn More</a>
-              </div>
-            </div>
-            
+<section class="services" id="services">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 order-2 order-lg-2 slick-height">
+        <img
+          src="{{site.baseurl}}assets/dev/img/about/tax-investigation-services.jpg"
+          class="img-fluid slick-img slick-shadow-right-white slick-height-x tax-inv-img"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-9 pt-4 pt-lg-0 order-2 order-lg-1 content text-black">
+        <h3>Tax Investigation</h3>
+        <p>
+          If you have received Tax Investigation letter from HMRC and looking
+          for an opinion we are happy to provide you our professional and
+          valuable opinion on it. We are very much experienced in providing this
+          service. We will study the correspondence from HMRC or another
+          authority and will provide our opinion. We provide this service on:<br />
+          1 - Hourly Rate<br />
+          2 - Success Rate
+        </p>
+        <p>
+          We provide assistance in all types of inquiries from Self assessment
+          returns filed to a full blown inquiry regarding your corporate
+          matters. We are aware of the stress these enquiries put on normal
+          people so we share this stress throughout the inquiry period by
+          sharing the progress and directly act as agents on your behalf.
+        </p>
+
+        <div>
+          <a href="" class="slick-btn">Learn More</a>
         </div>
-        
+      </div>
     </div>
+  </div>
 </section>
