--- a/_layouts/framework.html
+++ b/_layouts/framework.html
@@ -1,59 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>{{page.title}} | AAziz</title>
+    <meta
+      content="We are a team of Chartered Certified Accountants and legal consultants for all aspects of Accountancy, Taxation, commercial lease, legal business acquisition, mergers and sales transactions."
+      name="description"
+    />
+    <meta
+      content="accountants, legal consultants, certified accountants, taxation, tax, commercial lease, acquisition, mergers, sales transations, contractors accounts, "
+      name="keywords"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-158130709-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <title>{{page.title}} | AAziz</title>
-  <meta content="We are a team of Chartered Certified Accountants and legal consultants for all aspects of Accountancy, Taxation, commercial lease, legal business acquisition, mergers and sales transactions." name="description">
-  <meta content="accountants, legal consultants, certified accountants, taxation, tax, commercial lease, acquisition, mergers, sales transations, contractors accounts, " name="keywords">
+      gtag("config", "UA-158130709-2");
+    </script>
 
-  <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl}}assets/dev/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}assets/dev/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}assets/dev/favicon/favicon-16x16.png">
-  <link rel="manifest" href="{{site.baseurl}}assets/dev/favicon/site.webmanifest">
-  <link rel="mask-icon" href="{{site.baseurl}}assets/dev/favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="{{site.baseurl}}assets/dev/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#00aba9">
-  <meta name="msapplication-config" content="{{site.baseurl}}assets/dev/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{{site.baseurl}}assets/dev/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{{site.baseurl}}assets/dev/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{{site.baseurl}}assets/dev/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="{{site.baseurl}}assets/dev/favicon/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="{{site.baseurl}}assets/dev/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link
+      rel="shortcut icon"
+      href="{{site.baseurl}}assets/dev/favicon/favicon.ico"
+    />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta
+      name="msapplication-config"
+      content="{{site.baseurl}}assets/dev/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" defer>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+      defer
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="{{site.baseurl}}assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/vendor/icofont/icofont.min.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/vendor/animate.css/animate.min.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/vendor/venobox/venobox.css" rel="stylesheet" defer>
+    <!-- Vendor CSS Files -->
+    <link
+      href="{{site.baseurl}}assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/vendor/icofont/icofont.min.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/vendor/boxicons/css/boxicons.min.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/vendor/animate.css/animate.min.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/vendor/venobox/venobox.css"
+      rel="stylesheet"
+      defer
+    />
 
-  <!-- DevChain Main CSS File -->
-  <link href="{{site.baseurl}}assets/dev/css/style.css" rel="stylesheet" defer>
-  <link href="{{site.baseurl}}assets/dev/css/afterlife.css" rel="stylesheet" defer>
-  <style>
-    
-  </style>
-</head>
+    <!-- DevChain Main CSS File -->
+    <link
+      href="{{site.baseurl}}assets/dev/css/style.css"
+      rel="stylesheet"
+      defer
+    />
+    <link
+      href="{{site.baseurl}}assets/dev/css/afterlife.css"
+      rel="stylesheet"
+      defer
+    />
+    <style></style>
+  </head>
 
-<body>
+  <body>
     {{content}}
 
-
-
     <!-- Vendor JS Files -->
-    <script src="{{site.baseurl}}assets/vendor/jquery/jquery.min.js" defer></script>
-    <script src="{{site.baseurl}}assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-    <script src="{{site.baseurl}}assets/vendor/jquery.easing/jquery.easing.min.js" defer></script>
-    <script src="{{site.baseurl}}assets/vendor/owl.carousel/owl.carousel.min.js" defer></script>
-    <script src="{{site.baseurl}}assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-    <script src="{{site.baseurl}}assets/vendor/venobox/venobox.min.js" defer></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/jquery/jquery.min.js"
+      defer
+    ></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/bootstrap/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/jquery.easing/jquery.easing.min.js"
+      defer
+    ></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/owl.carousel/owl.carousel.min.js"
+      defer
+    ></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/isotope-layout/isotope.pkgd.min.js"
+      defer
+    ></script>
+    <script
+      src="{{site.baseurl}}assets/vendor/venobox/venobox.min.js"
+      defer
+    ></script>
 
     <!-- Template Main JS File -->
     <script src="{{site.baseurl}}assets/dev/js/main.js" defer></script>
-</body>
-
+  </body>
 </html>
