Added strict whatsapp number to header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,10 @@
               London Sw16 5NL<br>
               United Kingdom
               <br><br>
-              <strong>Phone:</strong> <a href="tel:{{site.socials.phone}}">{{ site.socials.phone }}</a> <br><strong>Mobile</strong><a href="tel:{{site.socials.whatsapp}}">{{site.socials.whatsapp}}</a> <br>
-              <strong>Email:</strong> <a href="mailto:{{site.email}}"> {{site.email}}</a> <br>
+              <strong>Phone: </strong> <a href="tel:{{site.socials.phone}}">{{ site.socials.phone }}</a><br>
+              <strong>Mobile: </strong><a href="tel:{{site.socials.whatsapp}}">{{site.socials.whatsapp}}</a> <br>
+              <strong>WhatsApp ONLY: </strong><a href="tel:{{site.socials.whatsapp2}}">{{site.socials.whatsapp2}}</a> <br>
+              <strong>Email: </strong> <a href="mailto:{{site.email}}"> {{site.email}}</a> <br>
             </p>
             
           </div>
