--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -5,6 +5,7 @@
         {% if site.email %}<i class="icofont-envelope"></i> <a href="mailto:{{site.email}}">info@aazizandco.co.uk</a>{% endif %}
         {% if site.socials.phone %}<i class="icofont-phone"></i> <a href="tel:{{site.socials.phone}}"> +44 20 3659 9254</a>{% endif %}
          <a href="https://wa.me/447810448530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> +44 78 1044 8530</a> 
+         <a href="https://wa.me/447810448530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> (Strictly WhatsApp) {{site.socials.whatsapp2}}</a> 
       </div>
       <div class="social-links">
         {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="icofont-twitter"></i></a>{% endif %}
