Changes from the boota sb

--- a/_includes/contact-full.html
+++ b/_includes/contact-full.html
@@ -20,13 +20,13 @@
             <div class="email">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>info@aazizandco.co.uk</p>
+              <p>{{site.email}}</p>
             </div>
 
             <div class="phone">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+44 20 3659 9254<br>+44 78 1044 8530</p>
+              <p>+44 20 3659 9254<br>+44 739 2438 213</p>
             </div>
 
             <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2%20-%20Sanders%20Parade,%20Greyhound%20Lane,%20Streatham+(AAziz%20&amp;%20Co.%20Accountants%20and%20Tax%20Consultants)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
