--- a/_includes/contact/map-fullham.html
+++ b/_includes/contact/map-fullham.html
@@ -1,6 +1,6 @@
 <section id="contact" class="contact slick-red-bg">
     <div class="section-title">
-        <h2 class="slick-hero-base">Fulham Branch Information</h2>
+        <h2 class="slick-hero-base">Camden Branch Information</h2>
     </div>
     <div class="container">
       <div class="row">
@@ -9,17 +9,17 @@
             <div class="address">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>New Kings House, 136-144 New Kings Road, Fulham, London SW6 4LZ</p>
+              <p>New Kings House, 136-144 New Kings Road, Camden, London SW6 4LZ</p>
             </div>
             <div class="email">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>info@aazizandco.co.uk</p>
+              <p>{{site.email}}</p>
             </div>
             <div class="phone">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+44 20 3659 9254 <br>+44 78 1044 8530</p>
+              <p>+44 20 3659 9254 <br>+44 739 2438 213</p>
             </div>
           </div>
         </div>
@@ -35,7 +35,7 @@
     </div>
     <div class="container">
 
-      
+
 
       <div class="row">
 
@@ -59,7 +59,7 @@
               <p>+92 303 777 5493</p>
             </div>
 
-            
+
           </div>
 
         </div>
