--- a/_includes/contact/map-london.html
+++ b/_includes/contact/map-london.html
@@ -17,16 +17,16 @@
             <div class="email">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>info@aazizandco.co.uk</p>
+              <p>{{site.email}}</p>
             </div>
 
             <div class="phone">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+44 20 3659 9254<br>+44 78 1044 8530</p>
+              <p>+44 20 3659 9254<br>+44 739 2438 213</p>
             </div>
 
-            
+
           </div>
 
         </div>
