--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -2,10 +2,10 @@
 <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        {% if site.email %}<i class="icofont-envelope"></i> <a href="mailto:{{site.email}}">info@aazizandco.co.uk</a>{% endif %}
+        {% if site.email %}<i class="icofont-envelope"></i> <a href="mailto:{{site.email}}">{{site.email}}</a>{% endif %}
         {% if site.socials.phone %}<i class="icofont-phone"></i> <a href="tel:{{site.socials.phone}}"> +44 20 3659 9254</a>{% endif %}
-         <a href="https://wa.me/447810448530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> +44 78 1044 8530</a> 
-         <a href="https://wa.me/447810448530"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447810448530"> (Strictly WhatsApp) {{site.socials.whatsapp2}}</a> 
+         <a href="https://wa.me/447392438213"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447392438213"> +44 739 2438 213</a>
+         <a href="https://wa.me/447392438213"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447392438213"> (Strictly WhatsApp) {{site.socials.whatsapp2}}</a>
       </div>
       <div class="social-links">
         {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="icofont-twitter"></i></a>{% endif %}
