--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/aaziz.svg" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
+            <a href="index.html" class="logo mr-auto" ><img src="{{site.baseurl}}assets/logo/final logo.jpeg" alt="" class="img-fluid" width="70%" style="margin-bottom: 20px;"></a>
             <p>
               2 - Sanders Parade, <br>
               Greyhound Lane, Streatham, <br>
