--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -8,10 +8,10 @@
          <a href="https://wa.me/447392438213"><i class="icofont-whatsapp"></i></a> </i> <a href="https://wa.me/447392438213"> (Strictly WhatsApp) {{site.socials.whatsapp2}}</a>
       </div>
       <div class="social-links">
-        {% if site.socials.twitter %}<a href="https://www.twitter.com/{{ site.socials.twitter }}" class="twitter"><i class="icofont-twitter"></i></a>{% endif %}
-        {% if site.socials.facebook %}<a href="https://www.facebook.com/{{ site.socials.facebook }}" class="facebook"><i class="icofont-facebook"></i></a>{% endif %}
+        {% if site.socials.twitter %}<a href="https://www.twitter.com/DepoTax_UK" class="twitter"><i class="icofont-twitter"></i></a>{% endif %}
+        {% if site.socials.facebook %}<a href="https://www.facebook.com/DepoTaxAccountants" class="facebook"><i class="icofont-facebook"></i></a>{% endif %}
         {% if site.socials.gmb %}<a href="https://g.page/{{ site.socials.gmb | append: "?gm" }}" class=""><i class="bx bxl-google"></i></a>{% endif %}
-        {% if site.socials.instagram %}<a href="https://www.instagram.com/{{site.socials.instagram }}" class="instagram"><i class="icofont-instagram"></i></a>{% endif %}
+        {% if site.socials.instagram %}<a href="https://www.instagram.com/depotax_uk" class="instagram"><i class="icofont-instagram"></i></a>{% endif %}
         {% if site.socials.skype %}<a href="{{ site.socials.skype }}" class="skype"><i class="icofont-skype"></i></a>{% endif %}
         {% if site.socials.linkedin %}<a href="#" class="{{ site.socials.linkedin }}"><i class="icofont-linkedin"></i></i></a>{% endif %}
         {% if site.socials.trustpilot %}<a href="#" class="{{ site.socials.trustpilot }}"><i class="icofont-star"></i></i></a>{% endif %}
